--- a/server_config.json
+++ b/server_config.json
@@ -1,7 +1,8 @@
 {
     "ip": "127.0.0.1",
-    "dsn": "host=localhost user=gopher password='password' database=gokeeper",
+    "dsn": "host=localhost user=gopher password=password database=gokeeper",
     "private_key": "./srv_private_key.pem",
+    "file_storage_path": "/opt/storage",
     "token_key": "dG9rZW4ga2V5",
     "port": 8080,
     "max_connection_count": 10,
